# MaCh3SbiTools

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .venv_sbi  README.md  codecov.yml  fitter.pkl  pyproject.toml  run_job.sh  slurm-15885725.out
.github/: labeler.yml  labler.yml  pull_request_template.md
.github/workflows/: README.md  automatic_tag.yml  codecov.yml  docs.yml  label.yml  mypy.yml  pr_title_check.yml  pre-commit.yml  pymach3_integration.yml  pytest.yml  ruff.yml
docs/: BUILDING_DOCS.md  README.md  bibliography.bib  conf.py  index.rst
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/.doctrees/: environment.pickle  index.doctree
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt
docs/modules/: cli.rst  data.rst  intro.rst  references.rst  simulator.rst
docs/modules/api_reference/: api_reference.rst  cli.rst  data.rst  diagnostics.rst  inference.rst  simulator.rst  utils.rst
docs/modules/getting_started/: building_simulator.rst  cli.rst  getting_started.rst  installation.rst  sbi_intro.rst
docs/modules/prebuilt/: pymach3.rst
examples/: __init__.py  pyMaCh3.py
examples/physics_engine/configs/: fitter_config.yml
notebooks/: comp_completed_model.ipynb  demo_notebook.ipynb  diagnose_model.ipynb  dune_notebook.ipynb  errors.txt  exam_completed_model.ipynb  fastepsfree.pkl  generate_model_gif.ipynb  model_comp.ipynb  my_fit.pkl  refine_sample_estimate.ipynb  standalone_load.ipynb  tutorial_notebook-training_size.ipynb  tutorial_notebook.ipynb
notebooks/.ipynb_checkpoints/: demo_notebook-checkpoint.ipynb
sbi-logs/NPE_C/2025-12-17T09_41_20.395560/: events.out.tfevents.1765993280.fc10514.1932106.0
src/mach3sbitools/: __init__.py  exceptions.py  types.py
src/mach3sbitools/apps/: ___main_sample_mach3__.py  __init__.py  __main__compare_models__.py  __main__mach3sbi__.py  __main_build_posterior__.py  __main_sample_mach3__.py  convert_to_standalone_posterior.py  diagnostics.py  importance_sample.py  inference.py  main_cli.py  save_data.py  save_prior.py  simulate.py  train.py
src/mach3sbitools/data_loaders/: __init__.py  paraket_dataloader.py  sbi_data_module.py
src/mach3sbitools/diagnostics/: __init__.py  compare_log.py  diagnostics.py  sbc.py
src/mach3sbitools/examples/: __init__.py
src/mach3sbitools/file_io/: file_handler_base.py  file_handler_factory.py  root_file_handler.py
src/mach3sbitools/inference/: __init__.py  inference_handler.py  lightning_module.py  sbi_custom_loop.py  sbi_interface.py  sbi_trainer.py  sbi_trainer_legacy.py  tensorboard_writer.py  training.py
src/mach3sbitools/mach3_interface/: mach3_importer.py  mach3_interface.py  mach3_prior.py  mach3_simulator.py
src/mach3sbitools/plotting/: mcmc_comp.py  model_comparison.py  plotter.py
src/mach3sbitools/sbi/: custom_inference.py  custom_training_loop.py  mach3_prior.py  sbi_factory.py  sbi_file_fitters.py  sbi_fitters.py  sbi_interface.py  sbi_mach3_fitters.py  sbi_mach3_interface.py
src/mach3sbitools/simulator/: __init__.py  simulator.py  simulator_injector.py
src/mach3sbitools/ui/: sbi_ui.py
src/mach3sbitools/utils/: __init__.py  config.py  device_handler.py  file_utils.py  logger.py  unpickler.py
tests/: README.md  conftest.py  pymach3_integ_test.py  test_cli.py  test_cyclical_dist.py  test_dataloader.py  test_diag_sbc.py  test_diagnositics.py  test_inference.py  test_inference_coverage.py  test_inference_handler.py  test_injector.py  test_lightning.py  test_logging.py  test_prior.py  test_simulator.py  test_simulator_coverage.py  test_tensorboard_writer.py  test_utils.py  test_utils_coverage.py
tests/dummy_simulator/: __init__.py  bad_simulator.py  dummy_config.yaml  dummy_simulator.py
tutorial/: Part 1-Traditional Bayesian.ipynb  Part 1: Traditional Bayesian.ipynb  Part 2-The SBI Simulator.ipynb  Part 2: The SBI Simulator.ipynb  Part 3-Generate Simulations with CLI.ipynb  Part 3: Generate Simulations with CLI.ipynb  Part 4-Training the SBI Algorithm.ipynb  Part 4: Training the SBI Algorithm.ipynb  Part 5-Diagnosing your SBI.ipynb  Part 5: Diagnosing your SBI.ipynb  Part 6-The Full Workflow in Jupyter.ipynb  Part 6: The Full Workflow in Jupyter.ipynb  README.md
tutorial/jupyter_tutorial/model/: my_model.ckpt
tutorial/my_simulator/: __init__.py  my_simulator.py
tutorial/physics_configs/: PhysicsConfig.yaml  SampleConfig.yaml
tutorial/physics_engine/: __init__.py  event_generator.py  mcmc.py  parameter_handler.py  sample_handler.py
tutorial/tensor-logs/: events.out.tfevents.1774350206.Henrys-Air-2.mynet.86220.2  events.out.tfevents.1774350282.Henrys-Air-2.mynet.88060.1
(+180 files in other folders)
